# algos

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  numerics.rs  pattern.rs  search.rs  sort.rs
src/numerics/: factorial.rs  fibonacci.rs  prime.rs  primorial.rs
