[package]
name = "algos"
version = "0.3.3"
authors = ["GrayJack <gr41.j4ck@gmail.com>"]
readme = "README.md"
license = "BSD-3-Clause"
license-file = "LICENSE"
repository = "https://github.com/GrayJack/algos"
documentation = "https://docs.rs/algos"
homepage = "https://crates.io/crates/algos"
description = "A collection of algorithms in rust"
exclude = ["/.travis.yml"]
edition = "2018"


[dependencies]
rand = "^0.6.4"
